@@ -1,3 +1,7 @@
+Mon Feb 18 17:26:10 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.h (push,pop): Fix Reg64 to WordReg to allow 16bit operands.
+
 Fri Feb 15 15:16:40 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.h (push,pop): Allow 16bit operands in 64bit mode.
